// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`<NavMenu /> > renders as expected when logged in 1`] = `
<body>
  <div />
  <div>
    <div
      class="css-0"
    >
      <div
        class="chakra-button__group css-qul7w4"
        data-orientation="horizontal"
        role="group"
      >
        home
        about
        contact
        launchApp
      </div>
    </div>
  </div>
</body>
`;

exports[`<NavMenu /> > renders as expected when not logged in 1`] = `
<body>
  <div>
    <div
      class="css-0"
    >
      <div
        class="chakra-button__group css-qul7w4"
        data-orientation="horizontal"
        role="group"
      >
        home
        about
        contact
      </div>
    </div>
  </div>
</body>
`;
